root/css/theme.css
:root {
	--bg-color: white;
	--color: black;
	--nav-bg-color: #eee;
	--nav-color: black;
	--nav-hover: #ccc;
}
.dark-mode {
	--bg-color: #444;
	--color: white;
	--nav-bg-color: #777;
	--nav-color: #777;
	--nav-hover: #999;
}
html, body {
	height: 100%;
}
body {
	background-color: var(--bg-color);
	color: var(--color);
}
a {
	color: var(--color);
}
@media screen and (min-width: 900px) {
	.centered {
		margin: 0 auto;
		width: 50%;
	}
}
@media screen and (max-width: 600px) {
	.desktop {
		display: none;
	}
}
.centered-text {
	text-align: center;
}
table.centered {
	margin: 0 auto;
	width: auto;
}
.hidden {
	display: none;
}
.nav-panel a {
	text-decoration: none;
}
.nav-panel a,
.nav-panel button,
.nav-panel input {
	background-color: var(--nav-bg-color);
	border: 5px solid var(--nav-color);
	border-radius: 15px;
	color: var(--color);
	font-size: 24px;
	padding: 3px;
}
.nav-panel input {
	width: 55%;
}
.nav-panel a:hover,
.nav-panel button:hover,
.nav-panel input:hover {
	background-color: var(--nav-hover);
	border: 5px solid var(--nav-hover);
}
.dark-mode-btn {
	border: 5px solid black;
}
.dark-mode-btn img {
	--size: 25px;
	height: var(--size);
	width: var(--size);
	vertical-align: middle;
}
.wrapper {
	margin: 0 auto 50px;
}

/* from  http://tholman.com/github-corners/*/
.github-corner svg {
	fill:var(--color);
	color:var(--bg-color);
	position: absolute;
	top: 0;
	border: 0;
	right: 0;
	height: 80px;
	width: 80px;
}
.octo-arm {
	transform-origin: 130px 106px;
}
.github-corner:hover .octo-arm {
	animation: octocat-wave 560ms ease-in-out;
}
@keyframes octocat-wave{
	0%,100% {
		transform:rotate(0);
	}
	20%,60% {
		transform:rotate(-25deg);
	}
	40%,80% {
		transform:rotate(10deg);
	}
}
@media (max-width:500px) {
	.github-corner:hover .octo-arm {
		animation:none;
	}
	.github-corner .octo-arm {
		animation:octocat-wave 560ms ease-in-out;
	}
}

